# Benzi

./: .gitattributes  .gitignore  IMPLEMENTATION_REPORT.md  PLAN.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/resources/browser/chrome-headless-shell-win64/: LICENSE.headless_shell  headless_command_resources.pak  headless_lib_data.pak  headless_lib_strings.pak
src-tauri/resources/browser/chrome-headless-shell-win64/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
src-tauri/resources/browser/chrome-headless-shell-win64/resources/accessibility/: reading_mode_gdocs_helper_manifest.json
src-tauri/resources/server/: .env
src-tauri/resources/server/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  required-server-files.json
src-tauri/resources/server/.next/server/: middleware-build-manifest.js
src-tauri/resources/server/.next/server/app/: impostazioni.rsc  page_client-reference-manifest.js  scadenze.rsc  servizi.html  (+1 more)
src-tauri/resources/server/storage/: sg-clima.db
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
(+298 files in other folders)
