[package]
name = "benzxi"
version = "1.0.0"
description = "Gestionale desktop per preventivi"
authors = ["Benzxi"]
edition = "2021"

[lib]
name = "benzxi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

