[package]
name = "gestione-preventivi"
version = "1.0.6"
description = "Gestionale desktop per preventivi"
authors = ["Gestione Preventivi"]
edition = "2021"

[lib]
name = "gestione_preventivi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
